reduced number of date options and removed car transport type

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,3 @@
-#date {
-  display: none;
-}
-
-#date1 {
-display: none;
-
-}
-
-#date2 {
-display: none;
-
-}
-
-#date3 {
+[id^='date'] {
   display: none;
 }
